Awards Alignment fix

--- a/assets/main.css
+++ b/assets/main.css
@@ -99,6 +99,10 @@ ion-item {
     width: 100%;
 }
 
+ion-icon {
+    color: var(--dark-color);
+}
+
 .titleIcon {
     display: inline-block;
     vertical-align: middle;
@@ -189,6 +193,10 @@ h1[class="animate"] {
     display: flex;
     width: 100%;
     height: 100%;
+}
+
+.awards div[class="animate"] {
+    margin: 1.5rem 0;
 }
 
 .inline {
